tests/ui/pub/pub-reexport-priv-extern-crate.stderr
error[E0365]: `core` is only public within the crate, and cannot be re-exported outside
  --> $DIR/pub-reexport-priv-extern-crate.rs:2:9
   |
LL | pub use core as reexported_core;
   |         ^^^^^^^^^^^^^^^^^^^^^^^ re-export of crate public `core`
   |
   = note: consider declaring type or module `core` with `pub`

error[E0365]: `core` is private, and cannot be re-exported
  --> $DIR/pub-reexport-priv-extern-crate.rs:7:13
   |
LL |     pub use self::core as core2;
   |             ^^^^^^^^^^^^^^^^^^^ re-export of private `core`
   |
   = note: consider declaring type or module `core` with `pub`

error[E0603]: crate import `core` is private
  --> $DIR/pub-reexport-priv-extern-crate.rs:11:22
   |
LL |     use crate::foo1::core;
   |                      ^^^^ private crate import
   |
note: the crate import `core` is defined here
  --> $DIR/pub-reexport-priv-extern-crate.rs:6:5
   |
LL |     extern crate core;
   |     ^^^^^^^^^^^^^^^^^^

error[E0603]: crate import `core` is private
  --> $DIR/pub-reexport-priv-extern-crate.rs:18:31
   |
LL |     pub use crate::foo2::bar::core;
   |                               ^^^^ private crate import
   |
note: the crate import `core` is defined here
  --> $DIR/pub-reexport-priv-extern-crate.rs:13:9
   |
LL |         extern crate core;
   |         ^^^^^^^^^^^^^^^^^^

error[E0603]: crate import `core2` is private
  --> $DIR/pub-reexport-priv-extern-crate.rs:22:11
   |
LL |     foo1::core2::mem::drop(());
   |           ^^^^^ private crate import
   |
note: the crate import `core2` is defined here...
  --> $DIR/pub-reexport-priv-extern-crate.rs:7:13
   |
LL |     pub use self::core as core2;
   |             ^^^^^^^^^^^^^^^^^^^
note: ...and refers to the crate import `core` which is defined here
  --> $DIR/pub-reexport-priv-extern-crate.rs:6:5
   |
LL |     extern crate core;
   |     ^^^^^^^^^^^^^^^^^^
help: consider importing this function instead
   |
LL -     foo1::core2::mem::drop(());
LL +     core::mem::drop(());
   |

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0365, E0603.
For more information about an error, try `rustc --explain E0365`.
